// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum EtatCommande {
  INITIEE
  STOCK_OK
  VENTE_CREEE
  CONFIRMEE
  ANNULEE
}

model Commande {
  id            String        @id @default(uuid())
  magasinId     Int
  total         Float         @default(0)
  etat          EtatCommande  @default(INITIEE)
  venteId       Int?          // id retourné par /ventes
  createdAt     DateTime      @default(now())
  updatedAt     DateTime      @updatedAt
  items         CommandeItem[]
  events        SagaEvent[]
}

model CommandeItem {
  id          String   @id @default(uuid())
  commandeId  String
  produitId   Int
  quantite    Int
  prixUnitaire Float?
  commande    Commande @relation(fields: [commandeId], references: [id], onDelete: Cascade)
}

model SagaEvent {
  id          String   @id @default(uuid())
  commandeId  String
  step        String
  outcome     String
  details     String?
  createdAt   DateTime  @default(now())
  commande    Commande @relation(fields: [commandeId], references: [id], onDelete: Cascade)
}